--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "crowdsurf.android.brainmurphy.com.autopilot"
+        applicationId "autopilot.android.brainmurphy.com.autopilot"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
