fixed merge conflicts and started to create contact layout

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 14 22:58:08 EST 2014
-sdk.dir=/Users/luis/Downloads/android-sdk-macosx
+#Sat Nov 15 02:44:18 EST 2014
+sdk.dir=C\:\\Users\\Brian\\Code\\Android\\sdk
