--- a/local.properties
+++ b/local.properties
@@ -7,10 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Sat Nov 15 02:44:18 EST 2014
-sdk.dir=C\:\\Users\\Brian\\Code\\Android\\sdk
-=======
-#Fri Nov 14 23:44:59 EST 2014
-sdk.dir=/Users/connorrmounts/Code/android-sdk-macosx
->>>>>>> local
+#Sat Nov 15 09:16:34 EST 2014
+>>>>>>>=local
+sdk.dir=/Users/luis/Downloads/android-sdk-macosx
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
