--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.0'
     compile files('/Users/connorrmounts/Code/autopilot/libs/jackson-core-2.4.3.jar')
+    compile files('/Users/luis/Documents/Development/autopilot/libs/jackson-core-2.4.3.jar')
 }
